feat: observability, production deployment, security, and predictive capabilities
Observability (PR-11):
- Add Actuator + Prometheus endpoints
- Structured JSON logging with traceId
- Prometheus + Grafana Docker configs

Production Deployment (PR-12):
- docker-compose.prod.yml with resource limits
- deploy.sh with pre-flight checks
- backup.sh (MySQL + Redis + uploads, 7-day rotation)
- restore.sh with service stop/start

Security Hardening (PR-13):
- JWT refresh token rotation with blacklisting
- Token blacklist via Redis with TTL
- CORS whitelist configurable via env var
- File upload MIME type validation
- Rate limiting (100 req/min API, 5 req/min login)
- Login failure lockout (5 attempts, 30 min)

Predictive Restock (PR-14):
- Weighted average daily consumption algorithm
- Stockout date prediction
- Risk level assessment (CRITICAL/HIGH/MEDIUM/LOW)
- Restock suggestion with supplier lead time

Predictive Maintenance (PR-15):
- Next maintenance date prediction
- Maintenance risk scoring
- Equipment failure rate analysis

Audit Anomaly Detection (PR-16):
- CONCURRENT_SESSION detection added
- All 6 anomaly detection rules implemented
- Enhanced anomaly scanning

V8 Flyway migration for security and observability tables