@@ -1,7 +1,10 @@
 package com.zyy.config;
 
 import com.zyy.security.JwtAuthFilter;
+import com.zyy.security.RateLimitFilter;
+import com.zyy.security.FileUploadValidationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -16,6 +19,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -29,6 +33,11 @@ import java.util.List;
 public class WebSecurityConfig {
 
     private final JwtAuthFilter jwtAuthFilter;
+    private final RateLimitFilter rateLimitFilter;
+    private final FileUploadValidationFilter fileUploadValidationFilter;
+
+    @Value("${security.cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
+    private String allowedOrigins;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -43,10 +52,12 @@ public class WebSecurityConfig {
             .authorizeHttpRequests(auth -> auth
                 // 放行公开接口
                 .requestMatchers("/api/users/login").permitAll()           // 登录
+                .requestMatchers("/api/users/refresh-token").permitAll()   // 刷新令牌
                 .requestMatchers("/api/users").permitAll()                 // 注册
                 .requestMatchers("/api/ai/**").permitAll()                 // AI 多模态服务（演示用）
                 .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-resources/**").permitAll()
                 .requestMatchers("/doc.html", "/webjars/**").permitAll()
+                .requestMatchers("/actuator/**").permitAll()               // Actuator endpoints
                 // RBAC 和审计接口需要认证
                 .requestMatchers("/api/roles/**").authenticated()
                 .requestMatchers("/api/menus/**").authenticated()
@@ -55,7 +66,11 @@ public class WebSecurityConfig {
                 .anyRequest().authenticated()
             )
             // 添加 JWT 认证过滤器
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+            // 添加限流过滤器（在JWT之前）
+            .addFilterBefore(rateLimitFilter, JwtAuthFilter.class)
+            // 添加文件上传MIME验证过滤器
+            .addFilterBefore(fileUploadValidationFilter, RateLimitFilter.class);
 
         return http.build();
     }
@@ -63,12 +78,21 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(List.of("*"));
+
+        // Parse allowed origins from configuration
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        // In development, also allow localhost variants
+        if (origins.stream().anyMatch(o -> o.contains("localhost"))) {
+            config.setAllowedOriginPatterns(origins);
+        } else {
+            config.setAllowedOrigins(origins);
+        }
+
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
